<resources>
    <string name="app_name">SecureNote</string>

    <string name="btn_ok">OK</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close_app">Close App</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_keep_editing">Keep Editing</string>

    <string name="msg_login_success">Login successful</string>
    <string name="msg_save_success">Saved!</string>
    <string name="msg_save_failed">Save Failed</string>
    <string name="msg_pin_length_error">Please enter 4 digits</string>
    <string name="msg_auth_error_prefix">Authentication Error: %1$s</string>
    <string name="msg_auth_failed">Authentication failed. Please try again.</string>
    <string name="msg_bio_unavailable">Biometric not available</string>
    <string name="msg_unlocked">Unlocked</string>
    <string name="msg_load_error">Error loading file</string>
    <string name="msg_file_error">File Error</string>

    <string name="bio_title">Authentication Required</string>
    <string name="bio_subtitle">Use fingerprint or face to decrypt</string>

    <string name="dialog_manage_title">Manage Note</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete this note?</string>
    <string name="dialog_unsaved_title">Unsaved Changes</string>
    <string name="dialog_unsaved_msg">You have unsaved changes. Are you sure you want to discard them?</string>

    <string name="title_security_risk">Security Risk</string>
    <string name="msg_device_rooted">Device is rooted. App cannot run.</string>
    <string name="msg_decrypt_failed">Decrypt Failed</string>
    <string name="msg_open_error">Error opening note</string>
    <string name="msg_keystore_error">KeyStore Error: Cipher initialization failed.</string>
    <string name="title_security_error">Security Error</string>

    <string name="add_note">Add Note</string>
    <string name="no_notes">No notes available</string>
    <string name="hint_search">Search...</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Type something secure here…</string>

    <string name="menu_pin">Pin</string>
    <string name="menu_unpin">Unpin</string>
    <string name="msg_note_pinned">Note pinned</string>
    <string name="msg_note_unpinned">Note unpinned</string>
    <string name="header_pinned">Pinned</string>
    <string name="header_recent">Recent</string>

    <string name="desc_back">Go back</string>
    <string name="desc_save">Save note</string>
    <string name="desc_pin">Pin/Unpin note</string>
    <string name="desc_upload_image">Upload image</string>

    <string name="preview_title">Note Title</string>
    <string name="preview_excerpt">This is a preview of the note content...</string>

    <string name="title_self_destruct">💀 SECURITY BREACH DETECTED</string>
    <string name="msg_self_destruct">Biometric change detected!\nZero Trust initiated.\nAll data is being destroyed immediately.</string>
    <string name="btn_bye">Goodbye...</string>
</resources>